crates/gpui-form-derive/src/derives/snapshots/gpui_form_derive__derives__component_shape__tests__component_shape_function_macro_accepts_direct_constructor_call.snap
---
source: crates/gpui-form-derive/src/derives/component_shape.rs
expression: pretty_tokens(expanded)
---
pub struct LocalInputShape(::core::marker::PhantomData<fn() -> ()>);
impl ::gpui_form_runtime::shape::ComponentShape for LocalInputShape {
    type State = crate::state::InputState;
    fn new(
        window: &mut ::gpui::Window,
        cx: &mut ::gpui::Context<'_, Self::State>,
    ) -> Self::State {
        crate::state::InputState::new(window, cx).with_label("email")
    }
    type ValueStoragePolicy = ::gpui_form_runtime::shape::RequiredValueStorage;
    type ValueBindingPolicy = ::gpui_form_runtime::shape::NoComponentValueBinding;
}
impl LocalInputShape {}
impl ::gpui_form_runtime::shape::DeclaredComponentShape for LocalInputShape {}
