crates/gpui-form-derive/src/derives/snapshots/gpui_form_derive__derives__component_shape__tests__component_shape_function_macro_accepts_value_storage_policy.snap
---
source: crates/gpui-form-derive/src/derives/component_shape.rs
expression: pretty_tokens(expanded)
---
pub struct SwitchShape(::core::marker::PhantomData<fn() -> ()>);
impl ::gpui_form_runtime::shape::ComponentShape for SwitchShape {
    type State = crate::state::SwitchState;
    fn new(
        window: &mut ::gpui::Window,
        cx: &mut ::gpui::Context<'_, Self::State>,
    ) -> Self::State {
        <crate::state::SwitchState>::new(window, cx)
    }
    type ValueStoragePolicy = ::gpui_form_runtime::shape::DirectValueStorage;
    type ValueBindingPolicy = ::gpui_form_runtime::shape::NoComponentValueBinding;
}
impl SwitchShape {}
impl ::gpui_form_runtime::shape::DeclaredComponentShape for SwitchShape {}
