crates/gpui-form-derive/src/derives/snapshots/gpui_form_derive__derives__component_shape__tests__component_shape_function_macro_emits_contract_impl.snap
---
source: crates/gpui-form-derive/src/derives/component_shape.rs
expression: pretty_tokens(expanded)
---
pub struct InputShape<T>(::core::marker::PhantomData<fn() -> (T)>);
impl<T> ::gpui_form_runtime::shape::ComponentShape for InputShape<T>
where
    T: ::std::str::FromStr + ::std::string::ToString + 'static,
{
    type State = ::gpui_component::input::InputState;
    fn new(
        window: &mut ::gpui::Window,
        cx: &mut ::gpui::Context<'_, Self::State>,
    ) -> Self::State {
        (|window, cx| ::gpui_component::input::InputState::new(window, cx))(window, cx)
    }
    type ValueStoragePolicy = ::gpui_form_runtime::shape::RequiredValueStorage;
    type ValueBindingPolicy = ::gpui_form_runtime::shape::NoComponentValueBinding;
    const COMPONENT_TYPE: Option<&'static str> = Some(
        stringify!(::gpui_component::input::Input),
    );
    const PROTOTYPING: ::gpui_form_runtime::shape::ComponentPrototyping = ::gpui_form_runtime::shape::ComponentPrototyping::new()
        .field_suffix("input");
}
impl<T> InputShape<T>
where
    T: ::std::str::FromStr + ::std::string::ToString + 'static,
{
    #[allow(dead_code)]
    fn __gpui_form_assert_render_component_contract(
        entity: &::gpui::Entity<::gpui_component::input::InputState>,
    ) -> ::gpui_component::input::Input {
        <::gpui_component::input::Input>::new(entity)
    }
}
impl<T> ::gpui_form_runtime::shape::DeclaredComponentShape for InputShape<T>
where
    T: ::std::str::FromStr + ::std::string::ToString + 'static,
{}
impl<T> ::gpui_form_runtime::shape::ComponentShapeFor<T> for InputShape<T>
where
    T: ::std::str::FromStr + ::std::string::ToString + 'static,
{}
